argocd/yamls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argodemo
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    name: argodemo
    app: demo
