argocd/yamls/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: argodemo
spec:
  ports:
    - name: http
      port: 5000
      protocol: TCP
  selector:
    name: argodemo
    app: demo
